Head First Rails chapter5.

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,6 +1,7 @@
 <h1>All Ads</h1>
 <ul>
 <% @ads.each do |ad| %>
-  <li><a href="/ads/<%= ad.id %>"><%= ad.name %></a></li>
+  <li><a href="/ads/<%= ad.id %>"><%= ad.name %></a>
+ [<a href="/ads/<%= ad.id %>/delete">Delete</a>]</li>
 <% end %>
 </ul>
